# erbf

./: .gitignore  LICENSE  MANIFEST.in  README.md  evoERBFLoRA-example.ipynb  main.py  mnist_results.py  paper.bib  paper.md  paper.tex  pyproject.toml  setup.py
.github/workflows/: ci.yml  draft-pdf.yml
erbf/: __init__.py  classifier.py  datasets.py  kernel.py  metrics.py  model_selection.py  regressor.py  sigma.py  utils.py  visualization.py
rbf_lora_verify/: README.md  requirements.txt  verify_all.py  verify_baselines.py  verify_conditioning.py  verify_counterfact.py  verify_mquake.py  verify_sequential.py
rbf_lora_verify/rbf_guided_lora/: __init__.py  baselines.py  metrics.py  pipeline.py
tests/: test_classifier.py  test_datasets.py  test_kernel.py  test_metrics.py  test_model_selection.py  test_package.py  test_regressor.py  test_sigma.py  test_utils.py
