[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "erbf"
version = "0.1.1"
description = "Exact Radial Basis Function Interpolation Library for classification and regression"
readme = "README.md"
license = "MIT"
authors = [
    {name = "ERBF Contributors"}
]
keywords = [
    "machine-learning",
    "radial-basis-function",
    "rbf",
    "interpolation",
    "classification",
    "regression",
    "kernel-methods",
    "torchvision"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
progress = ["tqdm>=4.60.0"]
viz = ["matplotlib>=3.4.0"]
datasets = ["scikit-learn>=1.0.0"]
all = [
    "tqdm>=4.60.0",
    "matplotlib>=3.4.0",
    "scikit-learn>=1.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/erbf-contributors/erbf"
Documentation = "https://github.com/erbf-contributors/erbf#readme"
Repository = "https://github.com/erbf-contributors/erbf"
Issues = "https://github.com/erbf-contributors/erbf/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["erbf*"]

[tool.setuptools.package-data]
erbf = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
